--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
+    "@ditdot-dev/vue-flow-form": "^2.3.1",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "axios": "^1.3.6",
     "core-js": "^3.6.5",
     "ionicons": "^7.0.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-axios": "^3.5.2",
+    "vue-mapbox-ts": "^0.9.7",
+    "vue-router": "^4.1.6",
+    "vue-yandex-maps": "^0.12.6"
   },
   "devDependencies": {
     "@capacitor/cli": "4.8.0",
