--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,19 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "target": "esnext",
+    "module": "esnext",
+    "noImplicitAny": false,
+    "strict": false,
+    "jsx": "preserve",
+    "checkJs": false,
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "baseUrl": ".",
     "types": [
       "webpack-env",
       "jest"
